--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html {
     @apply font-display text-[8rem] leading-[85%] tracking-tight;
   }
   h3 {
-    @apply font-display text-[7rem] font-semibold leading-[75%] tracking-tight;
+    @apply font-display text-[7rem] uppercase font-semibold leading-[75%] tracking-tight;
   }
   h4 {
     @apply text-[2.6rem] font-[450] leading-[140%] tracking-wide;
@@ -30,5 +30,5 @@ html {
 }
 
 .dim-text {
-  @apply text-[1.5rem] font-[400] leading-9 opacity-40;
+  @apply text-[1.5rem] font-[400] leading-9 text-gray-400
 }
