--- a/src/index.css
+++ b/src/index.css
@@ -13,34 +13,34 @@ html {
 
 @layer base {
   h1 {
-    @apply font-display text-[11rem] font-semibold uppercase leading-[85%] tracking-tight;
+    @apply font-display fhd:text-[13rem] text-[3.4rem] font-semibold uppercase leading-[85%] tracking-tight sm:text-[4.8rem] md:text-[5.9rem] lg:text-[7.6rem] xl:text-[10rem] 2xl:text-[11rem];
   }
   h2 {
-    @apply font-display text-[8rem] leading-[85%] tracking-tight;
+    @apply font-display fhd:text-[9.4rem] text-[3rem] leading-[85%] tracking-tight sm:text-[4.6rem] md:text-[5.3rem] lg:text-[6.8rem] xl:text-[8.2rem] 2xl:text-[8.9rem];
   }
   h3 {
-    @apply font-display text-[7rem] font-semibold uppercase leading-[75%] tracking-tight;
+    @apply font-display fhd:text-[8rem] text-[3.2rem] font-semibold uppercase leading-[75%] tracking-tight sm:text-[3.2rem] md:text-[4rem] lg:text-[5rem] xl:text-[6.3rem] 2xl:text-[7rem];
   }
   h4 {
-    @apply font-display text-[5.3rem] font-[450] uppercase leading-[112%] tracking-tight;
+    @apply font-display fhd:text-[6rem] text-[3rem] font-[550] uppercase leading-[100%] tracking-tight;
   }
   h5 {
-    @apply text-[2.6rem] font-[450] leading-[130%] tracking-wide;
+    @apply fhd:text-[3.2rem] text-[1.5rem] font-[450] leading-[125%] md:text-[1.6rem] lg:text-[1.8rem] xl:text-[2.3rem] 2xl:text-[2.6rem];
   }
   p {
-    @apply font-body text-[1.3rem] font-[400] leading-8 tracking-wider;
+    @apply font-body fhd:text-[1.6rem] text-[1rem] font-normal leading-6 tracking-wider sm:text-[1rem] xl:text-[1.2rem] 2xl:text-[1.3rem];
   }
   ul {
-    @apply flex w-full items-center justify-between text-sm font-[450] uppercase;
+    @apply fhd:text-lg flex w-full items-center justify-between text-sm font-[450] uppercase;
   }
 }
 
 .text-container {
-  @apply mt-44 px-32;
+  @apply mt-20 px-2 md:px-16 lg:mt-44 lg:px-24 xl:px-32;
 }
 
 .dim-text {
-  @apply text-[1.5rem] font-[400] leading-9 text-gray-400;
+  @apply fhd:text-[1.8rem] text-[1.1rem] font-[400] leading-6 text-gray-400;
 }
 
 /* overlay texture */
